Added page with examples. Added login form example.

--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -213,6 +213,9 @@ label em {
             }
         }
     }
+    form .atk-form-fieldset+.atk-cells {
+        display: table;
+    }
 }
 .atk-form-hybrid.atk-form {
     form {
