--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -4,9 +4,6 @@
 
 @cornerRadius:         5px;
 
-@dialogBlur:           10px; // Blur effect for modal dialog's overlay
-@dialogOverlay:        fade(#000, 15%); // Color of modal dialog's overlay
-
 
 // ==========================================================
 // Layout
@@ -73,6 +70,16 @@
 @effectWarning:        #f7a600;
 @effectDanger:         #ff2d1a;
 @effectInfo:           #6cc199;
+
+
+// ==========================================================
+// Widgets
+// ==========================================================
+
+@dialogBlur:           10px; // Blur effect for modal dialog's overlay
+@dialogOverlay:        fade(#000, 15%); // Color of modal dialog's overlay
+
+@tooltipColor:         fade(@atk-swatch-ink, 90%);
 
 
 // (!) — Need to check if it can be simplified.
