--- a/playground/layouts/fixed-multicol.html
+++ b/playground/layouts/fixed-multicol.html
@@ -11,7 +11,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="css/style-fixed.css" rel="stylesheet" type="text/css" />
+		<link href="../css/style-fixed.css" rel="stylesheet" type="text/css" />
     </head>
     <body class="atk-swatch-gray">
         <!--[if lt IE 7]>
@@ -67,19 +67,20 @@
 		<!-- /Content -->
 
         <!-- Scripts -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.core.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.widget.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.position.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.menu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.tabs.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.datepicker.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.selectmenu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.accordion.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.dialog.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.button.js"></script>
-        <script src="js/atk-helpers-min.js"></script>
-        <script src="js/demo.js"></script>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/core.js"></script>
+        <script src="../js/widget.js"></script>
+        <script src="../js/position.js"></script>
+        <script src="../js/menu.js"></script>
+        <script src="../js/tabs.js"></script>
+        <script src="../js/datepicker.js"></script>
+        <script src="../js/selectmenu.js"></script>
+        <script src="../js/accordion.js"></script>
+        <script src="../js/dialog.js"></script>
+        <script src="../js/button.js"></script>
+        <script src="../js/tooltip.js"></script>
+        <script src="../js/atk-helpers-min.js"></script>
+        <script src="../js/demo.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
