Updated design of the login form.

--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -59,6 +59,13 @@ a {
     }
 }
 
+.atk-color-facebook {
+    background: blue;
+}
+.atk-color-twitter {
+    background: blue;
+}
+
 
 // ==========================================================
 // Fixes
