--- a/playground/css/style-example.less
+++ b/playground/css/style-example.less
@@ -7,3 +7,6 @@
 @siteMaxWidth:         600px; // Put the same value as in @siteMinWidth if fixed layout is required
 
 @bodyBackground:       #f5f5f5;
+
+@atk-swatch-facebook:     #3b5999;		.createSwatch(atk-swatch-facebook);
+@atk-swatch-twitter:      #55ACEE;		.createSwatch(atk-swatch-twitter);
