Added blur animation to dialog overlay.

--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -12,7 +12,9 @@ html, body  {
 	height: 100%; /* INFO Optional CSS for a sticky footer */
 }
 .atk-layout {
+	.blur(0);
 	.box-sizing;
+	.transition(0.3s);
 	display: table;
 	height: 100%;
 	width: 100%;
