Animated dialog boxes.

--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -14,7 +14,7 @@ html, body  {
 .atk-layout {
 	.blur(-1);
 	.box-sizing;
-	.transition(0.3s);
+	.transition(ease-out 0.5s);
 	display: table;
 	height: 100%;
 	width: 100%;
