--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -255,6 +255,8 @@
     }
 }
 .ui-dialog {
+    .transition(ease-out 0.3s);
+    .scale(0.9,0.9);
     border-color: @borderOverlay;
     .ui-widget-header.ui-dialog-titlebar {
         padding: @margin @margin 0 @margin;
@@ -292,6 +294,9 @@
             overflow: auto;
             padding: round(@margin/2,2) @margin @margin @margin;
         }
+    }
+    .atk-dialog-enabled ~ & {
+        .scale(1,1);
     }
 }
 
