--- a/framework/css/agiletoolkit.less
+++ b/framework/css/agiletoolkit.less
@@ -1,6 +1,8 @@
-// ==========================================================
-// Import
-// ==========================================================
+
+/**
+ * Agile Toolkit CSS Framework (c) 2013-2014 v0.900
+ *  http://www4.agiletoolkit.org/css
+ */
 
 // Third Party Libraries
 @import '/libs/gridpak.less'; /* To generate your own grid system use www.gridpak.com */
