Added .atk-blur special effect.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -512,3 +512,8 @@ ul[class*=atk-menu] {
     border: 0.1em solid @borderClickable;
     color: @bodyColor;
 }
+
+// Special Effects
+.atk-blur {
+    .blur(@blur);
+}
