--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -32,7 +32,7 @@
 
 
 // ==========================================================
-// Colors
+// Styles & Colors
 // ==========================================================
 
 @bodyBackground:       #fff;
@@ -42,6 +42,8 @@
 
 @textSelect:           @atk-swatch-ink; // Text selection's color
 @textDimmed:           40%;
+
+@blur:                 5px; // Effect .atk-blur can be applied on any element.
 
 @borderStatic:         #e1e1e1;
 @borderClickable:      darken(@borderStatic, 10%);
@@ -76,8 +78,7 @@
 // Widgets
 // ==========================================================
 
-@dialogBlur:           7px; // Blur effect for modal dialog's overlay
-@dialogOverlay:        fade(#000, 15%); // Color of modal dialog's overlay
+@dialogOverlay:        fade(#fff, 85%); // Color of modal dialog's overlay
 
 @tooltipColor:         fade(@atk-swatch-ink, 90%);
 
