Changed default overlay color.

--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -78,7 +78,7 @@
 // Widgets
 // ==========================================================
 
-@dialogOverlay:        fade(#fff, 85%); // Color of modal dialog's overlay
+@dialogOverlay:        fade(#000, 20%); // Color of modal dialog's overlay
 
 @tooltipColor:         fade(@atk-swatch-ink, 90%);
 
