Playground's HTML converted to Jade. Layout templates in progress.

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -294,6 +294,12 @@
         }
     }
 }
+.ui-tooltip {
+    .box-shadow(0 3px 7px rgba(0,0,0,0.05));
+    .colorCheck(@tooltipColor);
+    background: @tooltipColor;
+    padding: round(@margin/3,2);
+}
 
 // Icon Replacement
 .ui-icon {
