--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -71,7 +71,7 @@
 @effectSuccess:        #25c425;
 @effectWarning:        #f7a600;
 @effectDanger:         #ff2d1a;
-@effectInfo:           #6cc199;
+@effectInfo:           #2bacd7;
 
 
 // ==========================================================
