Converted all templates to Jade.

--- a/playground/examples.jade
+++ b/playground/examples.jade
@@ -7,13 +7,7 @@ html(class='no-js')
   <!--<![endif]-->
   include includes/head
   body
-    <!--[if lt IE 8]>
-    p.browsehappy
-      | You are using an <strong>outdated</strong> browser.
-      | Please <a href="http://browsehappy.com/">upgrade your browser</a>
-      | to improve your experience.
-    <![endif]-->
-
+    include includes/browsehappy
     .atk-layout
       include includes/header
       .atk-layout-row.atk-layout-fluid
@@ -26,3 +20,4 @@ html(class='no-js')
                     li
                       a(href='examples/form-login.html') Login Form
     include includes/scripts
+    include includes/analytics
