--- a/playground/index.jade
+++ b/playground/index.jade
@@ -7,13 +7,7 @@ html(class='no-js')
   <!--<![endif]-->
   include includes/head
   body
-    <!--[if lt IE 8]>
-    p.browsehappy
-      | You are using an <strong>outdated</strong> browser.
-      | Please <a href="http://browsehappy.com/">upgrade your browser</a>
-      | to improve your experience.
-    <![endif]-->
-
+    include includes/browsehappy
     .atk-layout
       include includes/header
       .atk-layout-row.fluid
@@ -28,3 +22,4 @@ html(class='no-js')
               include includes/playground-jqueryui
       include includes/footer
     include includes/scripts
+    include includes/analytics
