--- a/playground/layouts/fixed-multicol.html
+++ b/playground/layouts/fixed-multicol.html
@@ -1,93 +1,11 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>AgileToolkit CSS</title>
-        <meta name="description" content="">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-		<link href="../css/style-fixed.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body class="atk-swatch-gray">
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <!-- Content -->
-        <div class="atk-layout">
-			<div class="atk-layout-row">
-                <div class="atk-layout-cell atk-swatch-ink">
-                    <div class="atk-wrapper atk-section-small">
-                        <h2>Header Section</h2>
-                    </div>
-                </div>
-			</div>
-			<div class="atk-layout-row">
-				<div class="atk-layout atk-layout-cell">
-					<div class="atk-layout-column atk-layout-fluid">
-                        <div class="atk-section-large atk-swatch-yellow">
-                            <div class="atk-wrapper">
-                                <h2>Hero Section</h2>
-                            </div>
-                        </div>
-                        <div class="atk-section-large atk-swatch-white">
-                        <div class="atk-wrapper">
-                            <div class="row">
-                                <div class="span_8 col">
-                                    <h2>Content Section</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.</p>
-                                    <p>Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.</p>
-                                    <p>Vestibulum volutpat nec augue quis pretium. Etiam ullamcorper, est eget ultricies fermentum, libero nibh lobortis erat, eu ullamcorper leo lacus eget augue. Mauris ac erat placerat, volutpat lorem consequat, pulvinar sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti. Nulla imperdiet laoreet augue pretium posuere.</p>
-                                </div>
-                                <div class="span_4 col">
-                                    <div class="atk-box atk-swatch-gray">
-                                        <h2>Sidebar</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna. Fusce id interdum est. Donec tempor dignissim interdum. Nulla eu dignissim risus.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        </div>
-					</div>
-				</div>
-			</div>
-            <div class="atk-layout-row atk-layout-fluid">
-                <div class="atk-layout-cell atk-swatch-gray">
-                    <div class="atk-wrapper atk-section">
-                        <h2>Footer Section</h2>
-                    </div>
-                </div>
-            </div>
-		</div>
-		<!-- /Content -->
-
-        <!-- Scripts -->
-        <script src="../js/jquery.min.js"></script>
-        <script src="../js/core.js"></script>
-        <script src="../js/widget.js"></script>
-        <script src="../js/position.js"></script>
-        <script src="../js/menu.js"></script>
-        <script src="../js/tabs.js"></script>
-        <script src="../js/datepicker.js"></script>
-        <script src="../js/selectmenu.js"></script>
-        <script src="../js/accordion.js"></script>
-        <script src="../js/dialog.js"></script>
-        <script src="../js/button.js"></script>
-        <script src="../js/tooltip.js"></script>
-        <script src="../js/atk-helpers-min.js"></script>
-        <script src="../js/demo.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
-</html>
+<!DOCTYPE html><!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--[endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="../css/style-fixed.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
+Please <a href="http://browsehappy.com/">upgrade your browser</a>
+to improve your experience.</p><![endif]--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-17702108-4');
+ga('send', 'pageview');</script><div class="atk-layout"><div class="atk-layout-row"><div class="atk-layout-cell atk-swatch-ink"><div class="atk-wrapper atk-section-small"><h2>Header Section</h2></div></div></div><div class="atk-layout-row"><div class="atk-layout atk-layout-cell"><div class="atk-layout-column atk-layout-fluid"><div class="atk-section-large atk-swatch-yellow"><div class="atk-wrapper"><h2>Hero Section</h2></div></div><div class="atk-section-large atk-swatch-white"><div class="atk-wrapper"><div class="row"><div class="span_8 col"><h2>Content Section</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.</p><p>Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.</p><p>Vestibulum volutpat nec augue quis pretium. Etiam ullamcorper, est eget ultricies fermentum, libero nibh lobortis erat, eu ullamcorper leo lacus eget augue. Mauris ac erat placerat, volutpat lorem consequat, pulvinar sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti. Nulla imperdiet laoreet augue pretium posuere.</p></div><div class="span_4 col"><div class="atk-box atk-swatch-gray"><h2>Sidebar</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna. Fusce id interdum est. Donec tempor dignissim interdum. Nulla eu dignissim risus.</p></div></div></div></div></div></div></div></div><div class="atk-layout-row atk-layout-fluid atk-swatch-gray"><div class="atk-layout-cell"><div class="atk-wrapper atk-section"><h2>Footer Section</h2></div></div></div></div></body></html>
