--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -493,7 +493,7 @@ section#widgets
             a.atk-padding-small(href='javascript:void(0)') Item 1
           li
             a.atk-padding-small(href='javascript:void(0)')
-              | Item 2
+              | Item 2&nbsp;
               span.atk-label.atk-size-milli.atk-shape-rounded.atk-swatch-green 12
           li
             a.atk-padding-small(href='javascript:void(0)') Item 3
