--- a/playground/includes/playground-jqueryui.jade
+++ b/playground/includes/playground-jqueryui.jade
@@ -140,7 +140,7 @@ section#jqueryui
         p
           | Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede.
           a(href='javascript:void(0)') Phasellus
-          | ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+          | &nbsp;ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
   h3 Datepicker
   .atk-box.atk-inline
     .atk-form
