Fixed span_* and atk-swatch-* bug.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -227,7 +227,7 @@ ul[class*=atk-menu] {
 
 // Box
 *[class*=atk-box] {
-    &, &[class*=span], .ui-tabs &.ui-tabs-panel.ui-widget-content {
+    &, .ui-tabs &.ui-tabs-panel.ui-widget-content {
         .border-radius(@cornerRadius);
         background: @colorLight;
         border: 1px solid @borderStatic;
