--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -148,7 +148,7 @@ section#components
     ul.atk-menu-horizontal
       li.atk-swatch-green
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
-          | Item #1
+          | Item #1&nbsp;
           span.icon-down-dir
         ul.atk-menu-horizontal
           li
@@ -163,7 +163,7 @@ section#components
             a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #5
       li.atk-swatch-blue
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
-          | Item #2
+          | Item #2&nbsp;
           span.icon-down-dir
         ul.atk-menu-vertical
           li
@@ -172,7 +172,7 @@ section#components
             a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #2
       li
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
-          | Item #3
+          | Item #3&nbsp;
           span.icon-down-dir
         ul.atk-menu-vertical
           li
@@ -194,6 +194,7 @@ section#components
         a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-gauge-1
+            | &nbsp;
             strong Dashboard
           span.atk-cell
             span.atk-label.atk-size-milli.atk-swatch-blue 253
@@ -201,6 +202,7 @@ section#components
         a.atk-padding-small.atk-swatch-ink.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-paper-plane
+            | &nbsp;
             strong Messages
           span.atk-cell
             span.atk-label.atk-size-milli.atk-shape-circle.atk-swatch-green 1
@@ -208,6 +210,7 @@ section#components
         a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-chart-line
+            | &nbsp;
             strong Analytics
           span.atk-cell
             span.icon-right-dir
@@ -226,6 +229,7 @@ section#components
         a.atk-padding-small.atk-swatch-ink.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-tools
+            | &nbsp;
             strong Settings
           span.atk-cell
             span.atk-size.atk-swatch-yellow.icon-attention
@@ -233,6 +237,7 @@ section#components
         a.atk-padding-small.atk-swatch-ink.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-lifebuoy
+            | &nbsp;
             strong Support
           span.atk-cell
             span.icon-right-dir
@@ -251,6 +256,7 @@ section#components
         a.atk-padding-small.atk-swatch-ink.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-chat-empty
+            | &nbsp;
             strong Forums
           span.atk-cell
             span.icon-right-dir
@@ -334,6 +340,7 @@ section#components
   p
     span.atk-label.atk-effect-warning
       span.icon-attention
+    | &nbsp;
     span.atk-label.atk-effect-info .atk-section
     | &nbsp;component creates top and bottom margins. It is the best used for pages with fixed centered layout.&nbsp;
     strong Options:&nbsp;
