--- a/playground/includes/playground-jqueryui.jade
+++ b/playground/includes/playground-jqueryui.jade
@@ -142,6 +142,10 @@ section#jqueryui
           a(href='javascript:void(0)') Phasellus
           | &nbsp;ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
   h3 Datepicker
+  p
+    | Basic&nbsp;
+    span.atk-label.atk-effect-info .ui-datepicker
+    | &nbsp;widget.
   .atk-box.atk-inline
     .atk-form
       form
@@ -150,6 +154,17 @@ section#jqueryui
             label(for='datepicker') Date:
           .atk-cell
             input#datepicker(type='text')
+  p
+    span.atk-label.atk-effect-info .ui-datepicker
+    | &nbsp;with year and month dropdowns.
+  .atk-box.atk-inline
+    .atk-form
+      form
+        .atk-cells.atk-cells-gutter-small
+          .atk-cell
+            label(for='datepicker2') Date:
+          .atk-cell
+            input#datepicker2(type='text')
   h3 Tooltips
   #example-jqueryui-tooltips.atk-box
     | Lorem ipsum dolor sit amet, consectetur adipisicing elit.&nbsp;
