Border fix in .ui-selectmenu

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -93,9 +93,9 @@
     }
 }
 .ui-selectmenu-menu {
-    border: 1px solid @borderOverlay;
     .ui-menu {
-        border: none;
+        border: 1px solid @borderOverlay;
+        border-top-width: 0;
         max-height: 240px;
         overflow: auto;
         padding: 0;
