--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -85,3 +85,11 @@ a {
       }
   }
 }
+*[class*=icon] {
+  &:first-child:last-child {
+    &:before {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
