--- a/playground/includes/playground-forms.jade
+++ b/playground/includes/playground-forms.jade
@@ -31,6 +31,26 @@ section#forms
                 option(value='Medium', selected='selected') Medium Roast
                 option(value='Fast') Fast
                 option(value='Faster') Faster
+                option(value='Slower') Slower
+                option(value='Slow') Slow
+                option(value='Medium', selected='selected') Medium Roast
+                option(value='Fast') Fast
+                option(value='Faster') Faster
+                option(value='Slower') Slower
+                option(value='Slow') Slow
+                option(value='Medium', selected='selected') Medium Roast
+                option(value='Fast') Fast
+                option(value='Faster') Faster
+                option(value='Slower') Slower
+                option(value='Slow') Slow
+                option(value='Medium', selected='selected') Medium Roast
+                option(value='Fast') Fast
+                option(value='Faster') Faster
+                option(value='Slower') Slower
+                option(value='Slow') Slow
+                option(value='Medium', selected='selected') Medium Roast
+                option(value='Fast') Fast
+                option(value='Faster') Faster
           .atk-cells.atk-cells-gutter-large
             .atk-cell
               label Textarea:
