--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -24,10 +24,10 @@ section#widgets
             .atk-actions
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
-                | Download
+                | &nbsp;Download
               a(href='javascript:void(0)')
                 span.icon-trash
-                | Delete
+                | &nbsp;Delete
         .atk-cells.atk-cells-gutter-large.atk-box.atk-swatch-red
           .atk-cell
             img(src='temp/tomatoes.jpg', alt='Tomatoes')
@@ -38,10 +38,10 @@ section#widgets
             .atk-actions
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
-                | Download
+                | &nbsp;Download
               a(href='javascript:void(0)')
                 span.icon-trash
-                | Delete
+                | &nbsp;Delete
       .span_6.col
         .atk-cells.atk-cells-gutter-large.atk-box.atk-swatch-yellow.atk-valign-top
           .atk-cell
@@ -53,10 +53,10 @@ section#widgets
             .atk-actions
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
-                | Download
+                | &nbsp;Download
               a(href='javascript:void(0)')
                 span.icon-trash
-                | Delete
+                | &nbsp;Delete
         .atk-cells.atk-cells-gutter-large.atk-box.atk-swatch-blue
           .atk-cell
             img(src='temp/blueberries.jpg', alt='Blueberries')
@@ -67,10 +67,10 @@ section#widgets
             .atk-actions
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
-                | Download
+                | &nbsp;Download
               a(href='javascript:void(0)')
                 span.icon-trash
-                | Delete
+                | &nbsp;Delete
   h3 Tables
   // [Widget] Table
   p
@@ -269,7 +269,7 @@ section#widgets
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
-              | Brian O'Connell
+              | &nbsp;Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
             td.atk-align-center
               a(href='javascript:void(0)') Edit
@@ -297,7 +297,7 @@ section#widgets
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
-              | Danny Brown
+              | &nbsp;Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.atk-align-center
               a(href='javascript:void(0)') Edit
@@ -325,7 +325,7 @@ section#widgets
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
-              | John Smith
+              | &nbsp;John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
             td.atk-align-center
               a(href='javascript:void(0)') Edit
@@ -353,7 +353,7 @@ section#widgets
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
-              | Satya Nadella
+              | &nbsp;Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.atk-align-center
               a(href='javascript:void(0)') Edit
