--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -36,6 +36,9 @@ h1, h2, h3, h4, h5, h6 {
         margin-top: @margin;
     }
 }
+h5 {
+    font-weight: bold;
+}
 
 .atk-size-exa {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*4.5);
