--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -21,7 +21,7 @@ section#widgets
             h4 Apples
             p.atk-push-small
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
-            .atk-actions
+            .atk-actions-large
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
                 | &nbsp;Download
@@ -35,7 +35,7 @@ section#widgets
             h4 Tomatoes
             p.atk-push-small
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
-            .atk-actions
+            .atk-actions-large
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
                 | &nbsp;Download
@@ -50,7 +50,7 @@ section#widgets
             h4 Bananas
             p.atk-push-small
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
-            .atk-actions
+            .atk-actions-large
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
                 | &nbsp;Download
@@ -64,7 +64,7 @@ section#widgets
             h4 Blueberries
             p.atk-push-small
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
-            .atk-actions
+            .atk-actions-large
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
                 | &nbsp;Download
@@ -472,7 +472,7 @@ section#widgets
             td.atk-padding-large.atk-align-center
               span.atk-label.atk-effect-warning
                 span.icon-attention
-                | No results found.
+                | &nbsp;No results found.
   h4 Navigation Bar
   p
     | Combination of&nbsp;
