Variable colorFocus renamed to inputFocus.

--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -77,7 +77,7 @@
 
 @formMandatory:        #ff0000;
 
-@colorFocus:           @atk-swatch-blue;
+@inputFocus:           @atk-swatch-blue;
 
 
 // (!) — Need to check if it can be simplified.
