--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -53,8 +53,8 @@ input[type="reset"]::-moz-focus-inner {
 input[type=text]:focus,
 input[type=password]:focus,
 textarea:focus {
-    @shadow: 0 0 3px fadeout(@colorFocus,30%), 0 0 10px fadeout(@colorFocus,70%);
-    border-color: @colorFocus;
+    @shadow: 0 0 3px fadeout(@inputFocus,30%), 0 0 10px fadeout(@inputFocus,70%);
+    border-color: @inputFocus;
     .box-shadow(@shadow);
     outline: none;
 }
